--- a/index.html
+++ b/index.html
@@ -28,20 +28,71 @@
       }
     </style>
   </head>
-  <body>
-    “ I’ve been interested in coding for a while but never taken the jump, until
-    now. I couldn’t recommend this course enough. I’m now in the job of my
-    dreams and so excited about the future. ” Tanya Sinclair UX Engineer “ If
-    you want to lay the best foundation possible I’d recommend taking this
-    course. The depth the instructors go into is incredible. I now feel so
-    confident about starting up as a professional developer. ” John Tarkpor
-    Junior Front-end Developer
+  <body class="[ cover ]">
+    <header style="position: relative">
+      <h1 class="[ sr-only ]">Coding Bootcamp Testimonial Slider</h1>
+    </header>
 
-    <div class="attribution">
+    <main class="[ centered ]">
+      <div class="[ carousel ]">
+        <ul class="[ carousel-controls ]" aria-label="carousel controls">
+          <li>
+            <button class="[ previous ]" aria-label="previous slide">
+              <img
+                src="./develop/assets/images/icon-prev.svg"
+                alt=""
+                aria-hidden="true"
+                focusable="false"
+              />
+            </button>
+          </li>
+          <li>
+            <button class="[ next ]" aria-label="next slide">
+              <img
+                src="./develop/assets/images/icon-next.svg"
+                alt=""
+                aria-hidden="true"
+                focusable="false"
+              />
+            </button>
+          </li>
+        </ul>
+        <div
+          class="[ carousel__gallery ]"
+          role="group"
+          aria-label="slider (scroll for more)"
+          tabindex="0"
+        >
+          <!-- change class visible to a data attribute  -->
+          <ul class="[ carousel__list ]">
+            <li class="[ card ] [ visible ]">
+              <figure>
+                <div class="[ card__image ]">
+                  <img src="./develop/assets/images/image-tanya.jpg" alt="" />
+                </div>
+
+                <blockquote class="[ card__text ]">
+                  I’ve been interested in coding for a while but never taken the
+                  jump, until now. I couldn’t recommend this course enough. I’m
+                  now in the job of my dreams and so excited about the future.
+                </blockquote>
+
+                <figcaption class="[ card__name ]">
+                  Tanya Sinclair
+                  <span class="[ card__title ]">UX Engineer</span>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
+
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Daniel Arzanipour</a>.
-    </div>
+    </footer>
   </body>
 </html>
