set up base css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="[ centered ]">
-      <div class="[ carousel ]">
+      <div class="[ carousel ] [ center ]">
         <ul class="[ carousel-controls ]" aria-label="carousel controls">
           <li>
             <button class="[ previous ]" aria-label="previous slide">
@@ -42,7 +42,6 @@
                 src="./develop/assets/images/icon-prev.svg"
                 alt=""
                 aria-hidden="true"
-                focusable="false"
               />
             </button>
           </li>
@@ -52,7 +51,6 @@
                 src="./develop/assets/images/icon-next.svg"
                 alt=""
                 aria-hidden="true"
-                focusable="false"
               />
             </button>
           </li>
