style and make responsive text and images

--- a/index.html
+++ b/index.html
@@ -62,22 +62,24 @@
           tabindex="0"
         >
           <!-- change class visible to a data attribute  -->
-          <ul class="[ carousel__list ]">
+          <ul class="[ gallery ]">
             <li class="[ card ] [ visible ]">
               <figure>
                 <div class="[ card__image ]">
                   <img src="./develop/assets/images/image-tanya.jpg" alt="" />
                 </div>
 
-                <blockquote class="[ card__text ]">
+                <blockquote class="[ card__text ] [ fw-light text-quote ]">
                   I’ve been interested in coding for a while but never taken the
                   jump, until now. I couldn’t recommend this course enough. I’m
                   now in the job of my dreams and so excited about the future.
                 </blockquote>
 
-                <figcaption class="[ card__name ]">
+                <figcaption class="[ card__name ] [ fw-bold text-quote ]">
                   Tanya Sinclair
-                  <span class="[ card__title ]">UX Engineer</span>
+                  <span class="[ card__title ] [ fw-medium text-fig-title ]"
+                    >UX Engineer</span
+                  >
                 </figcaption>
               </figure>
             </li>
