fix issue where i cannot select buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                     aria-label="carousel controls"
                   >
                     <li>
-                      <button class="[ previous ]" aria-label="previous slide">
+                      <button
+                        data-prev
+                        class="[ previous ]"
+                        aria-label="previous slide"
+                      >
                         <img
                           src="./develop/assets/images/icon-prev.svg"
                           alt=""
@@ -69,7 +73,11 @@
                       </button>
                     </li>
                     <li>
-                      <button class="[ next ]" aria-label="next slide">
+                      <button
+                        data-next
+                        class="[ next ]"
+                        aria-label="next slide"
+                      >
                         <img
                           src="./develop/assets/images/icon-next.svg"
                           alt=""
@@ -112,7 +120,11 @@
                     aria-label="carousel controls"
                   >
                     <li>
-                      <button class="[ previous ]" aria-label="previous slide">
+                      <button
+                        data-prev
+                        class="[ previous ]"
+                        aria-label="previous slide"
+                      >
                         <img
                           src="./develop/assets/images/icon-prev.svg"
                           alt=""
@@ -121,7 +133,11 @@
                       </button>
                     </li>
                     <li>
-                      <button class="[ next ]" aria-label="next slide">
+                      <button
+                        data-next
+                        class="[ next ]"
+                        aria-label="next slide"
+                      >
                         <img
                           src="./develop/assets/images/icon-next.svg"
                           alt=""
