add javascript functionality to switch slides on button click

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </li>
 
             <!-- CARD 2 -->
-            <li class="[ card ] [ visible ]">
+            <li class="[ card ]">
               <figure>
                 <div class="[ card__image ] [ lazy-image ]">
                   <img
